# muntjac-soc

./: .gitignore  .gitmodules  Makefile  README.md  chip_top.core  core_wrapper.core
data/: bizcat.psf  clocks.xdc  clocks_genesys_2.xdc  debian_packages.txt  linux.config  mig.prj  mig_genesys_2.prj  mii_to_rmii_v2_0.tar  pins_genesys_2.xdc  pins_nexys_a7.xdc  rgb2dvi.tar
docs/: tutorial.md
firmware/: .gitignore  Cargo.toml  Makefile  build.rs  device_tree.tpl.dts  linker.tpl.ld  platform.rs  rust-toolchain.toml
firmware/.cargo/: config
firmware/src/: address.rs  allocator.rs  elf.rs  entry.S  ethernet.rs  flash.rs  fmt.rs  fp.rs  fpr.s  hart_mask.rs  inflate.rs  interp.rs  io.rs  iomem.rs  ipi.rs  main.rs  memcpy.S  memmove.S  memory.rs  memset.S  memtest.rs  misalign.rs  panic.rs  sbi.rs  stackbox.rs  timer.rs  uart.rs  util.rs  video.rs
firmware/src/block/: mod.rs  part.rs  sd.rs
firmware/src/fs/: ext.rs  fat.rs  mod.rs
firmware/src/net/: mod.rs  p9.rs  tcp.rs  xae.rs
firmware/src/video/: fbcon.rs
genesys_2/: Makefile
genesys_2/data/: clocks.xdc  device_tree.dts  pins.xdc
genesys_2/rtl/: chip_top.sv  ddr.sv  dvi.sv  eth.sv  muntjac_core_wrapper.sv
genesys_2/util/: create_eth_ip.tcl  generate_mcs.tcl  vivado_create_ip.tcl
ip/: tl.xml  tl_rtl.xml
ip/mii_to_rmii_v2_0/: component.xml
ip/mii_to_rmii_v2_0/doc/: mii_to_rmii_v2_0_changelog.txt
ip/mii_to_rmii_v2_0/hdl/: mii_to_rmii_v2_0_vh_rfs.vhd
ip/mii_to_rmii_v2_0/ttcl/: exdes_xdc.ttcl
nexys_a7/: Makefile
nexys_a7/data/: clocks.xdc  device_tree.dts  mig.prj  pins.xdc
nexys_a7/rtl/: chip_top.sv  ddr.sv  eth.sv  muntjac_core_wrapper.sv
nexys_a7/util/: create_eth_ip.tcl  generate_mcs.tcl  vivado_create_ip.tcl
nexys_video/: Makefile
nexys_video/data/: clocks.xdc  device_tree.dts  mig.prj  pins.xdc
nexys_video/rtl/: chip_top.sv  ddr.sv  dvi.sv  muntjac_core_wrapper.sv
nexys_video/util/: generate_mcs.tcl  vivado_create_ip.tcl
rtl/: ccx.sv  chip_top.sv  chip_top_genesys_2.sv  ddr.sv  ddr_genesys_2.sv  gpio.sv  ps2.sv  sdhci.sv  spi.sv  uart.sv
rtl/uncore/: axi_adpter_tl.sv  clint.sv  clint_tl.sv  plic.sv  plic_tl.sv  tl_adapter_axi.sv
rtl/util/: reset_sync.v  seg_driver.sv  sync.v
rtl/wrapper/: axi_tl.v  axi_tl_wrapper.sv  clint_top.v  plic_top.v  sdc.v  tl_axi.v  tl_axi_wrapper.sv
tools/linker/: Cargo.toml
tools/linker/src/: main.rs
util/: create_rootfs.sh  generate_bitstream.tcl  program_bitstream.tcl  program_flash.tcl  vivado_create_ip.tcl  vivado_create_ip_genesys_2.tcl
