[package]
name = "bootloader"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2021"

[build-dependencies]
cc = "1"
rand = "0.8"
regex = "1.5"
fdt = "0.1.3"

[dependencies]
byteorder = { version = "1", default-features = false }
arrayvec = { version = "0.5", default-features = false }
softfp = { version = "0.1.0", default-features = false }
riscv = { git = "https://github.com/nbdd0121/r2vm.git" }
spin = "0.9"
log = { version = "0.4", default-features = false }
unwinding = { version = "0.1.4", default-features = false, features = ["unwinder", "personality", "fde-gnu-eh-frame-hdr", "panicking"] }

[patch.crates-io]

[features]
fp-mem = []
fp-none = ["fp-mem"]
default = ["fp-none"]

[profile.release]
opt-level = 3
lto = true
debug = true
panic = "unwind"
