[package]
name = "bootloader"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2021"

[build-dependencies]
cc = "1"
rand = "0.8"
regex = "1.5"
fdt = "0.1.3"

[dependencies]
byteorder = { version = "1", default-features = false }
arrayvec = { version = "0.7", default-features = false }
softfp = { version = "0.1.0", default-features = false }
riscv = { git = "https://github.com/nbdd0121/r2vm.git" }
buddy = { git = "https://github.com/nbdd0121/buddy.git" }
ro_cell = "0.1"
spin = "0.9"
log = { version = "0.4", default-features = false }
unwinding = { version = "0.1.4", default-features = false, features = ["unwinder", "personality", "fde-gnu-eh-frame-hdr", "panicking"] }
psf2 = { version = "0.4", default-features = false, optional = true }

[features]
fp-mem = []
fp-none = ["fp-mem"]
fbcon = ["psf2"]
default = ["fp-none", "fbcon"]

[profile.release]
opt-level = 3
lto = true
debug = true
panic = "unwind"
